# tenkizu_cluster

./: Crawler.ipynb  README.md  k-means.ipynb  out_10.csv  pyproject.toml
output/: out.csv
work/: k-means.ipynb
