[tool.poetry]
name = "tenkizu-cluster"
version = "0.1.0"
description = ""
authors = ["temari <kurakore112@gmail.com>"]
readme = "README.md"
packages = [{include = "tenkizu_cluster"}]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
tqdm = "^4.64.0"
scikit-learn = "^1.1.2"
ipykernel = "^6.15.1"
netCDF4 = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
